fix: button text alignment change on focus
* removed display inherit

--- a/src/components/button.module.css
+++ b/src/components/button.module.css
@@ -15,7 +15,6 @@
   outline: none;
   margin: inherit;
   border: inherit;
-  display: inherit;
   -webkit-align-content: inherit;
   -webkit-animation-delay: inherit;
   -webkit-animation-fill-mode: inherit;
